[metadata]
name = pkgstore-init
version = 0.0.1
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
author = Kitsune Solar
author_email = mail@kitsune.solar
license = MIT
license_file = LICENSE
url = https://pkgstore.github.io
project_urls =
    Twitter = https://twitter.com/pkgstore
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
